--- a/styles/globals.css
+++ b/styles/globals.css
@@ -89,8 +89,19 @@ a {
   margin:50px;
   width: 90%;
 }
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+}
 
-
+.one {
+  grid-column: 1;
+}
+.two {
+  grid-column: 2;
+}
 @media screen and (max-width: 1200px) {
   .nav-title{
     font-size: 14px ;
