--- a/styles/globals.css
+++ b/styles/globals.css
@@ -129,7 +129,7 @@ a {
 }
 
 .profile-pic{
-  box-shadow:10px 10px 4px rgba(0, 0, 0, 0.25);
+  box-shadow:10px 10px 4px rgba(0, 0, 0, 0.25) !important;
 }
 
 @media screen and (max-width: 1200px) {
