--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,8 @@ a {
 }
 
 .active{
-  
+  background-color: #ffffff;
+  border-radius: 8px;
 }
 
 .nav{
@@ -37,12 +38,13 @@ a {
   position: absolute;
   right: 0;
   text-align: right;
-  width: 1000px;
+  width: 1500px;
   vertical-align: middle;
   padding: 0px;
   display: inline-block;
   margin-top: 70px;
 }
+
 .burger{
   visibility: hidden;
 }
@@ -60,9 +62,12 @@ a {
   display: inline;
   text-align: right;
   font-size: 16px ;
-  padding: 15px ; 
+  padding: 15px 10px 15px 10px;
 }
-
+.nav-title:hover{
+  background-color: #f0f0f0;
+  border-radius: 8px;
+}
 .container{
   padding-top: 78px;
   width: 90%;
