fix modal position

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,7 @@ a {
   top: 0;
   overflow: hidden; /* Position the navbar at the top of the page */
   /*opacity: 0.8;*/
-  /* z-index: 1; */
+  z-index: 1;
   
 }
 .nav-titles {
@@ -141,6 +141,9 @@ a {
   grid-column: 2;
 }
 
+.modal-button{
+  margin-left: 99%;
+}
 /* .profile-pic{
   box-shadow:10px 10px 4px rgba(0, 0, 0, 0.25) !important;
 } */
