--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,7 +19,7 @@ a {
   box-sizing: border-box;
 }
 
-.profile_pic{
+.profile-pic>div{
   box-shadow:10px 10px 4px rgba(0, 0, 0, 0.25) !important;
 }
 
