--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,10 @@ a {
   box-shadow:10px 10px 4px rgba(0, 0, 0, 0.25) !important;
 }
 
+.title{
+  padding: 10px;
+}
+
 .active{
   background-color: #ffffff;
   border-radius: 8px;
@@ -177,6 +181,15 @@ a {
   display: grid; 
   grid-template-columns: 1fr 1fr; 
   grid-template-rows: 1fr; 
+  gap: 0px 0px; 
+  grid-template-areas: 
+    ". ."; 
+}
+
+.g1-1-r2 {
+  display: grid; 
+  grid-template-columns: 1fr 1fr; 
+  grid-template-rows: 2fr; 
   gap: 0px 0px; 
   grid-template-areas: 
     ". ."; 
