--- a/styles/style_modal.css
+++ b/styles/style_modal.css
@@ -69,7 +69,10 @@ body {
     overflow: hidden;
     background-image: url("https://res.cloudinary.com/dovbrtmkv/image/upload/v1494873393/cork_mlmb4o.jpg");
     border: 20px solid #805500;
-    font-family: "Bree Serif";
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
+    font-weight: 300;
+    line-height: 1.65;
+    text-align: center;
     border-radius: 5%;
   }
   
