--- a/styles/globals.css
+++ b/styles/globals.css
@@ -320,3 +320,7 @@ box-sizing: border-box; /*3*/
     grid-auto-rows: minmax(100px, auto);
   }
 }
+
+.transparent{
+  background-color: rgba(255, 255, 255, 0.9) !important;
+}
